--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NazariiSova.github.io/BOSE-react-mate",
+  "homepage": "https://nazariisova.github.io/BOSE-react-mate/",
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
